Namespace.YAML
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-python
  labels:
    name: kafka-python
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: kafka-python
  labels:
    app: broker
spec:
  selector:
    app: broker
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: kafka-python
  labels:
    app: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - name: zookeeper
      port: 2181
      targetPort: 2181
