policy.YAML
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-python
spec:
  podSelector:
    matchLabels:
      app: myapp
  ingress:
  - from:
    - podSelector: {}
